--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,25 @@
         android:theme="@style/Theme.TravelGuider"
         tools:targetApi="31">
         <activity
-            android:name=".SignUpActivity"
-            android:exported="false"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/NoActionBar"/>
+            android:name=".BaseActivity"
+            android:exported="false" />
         <activity
-            android:name=".SignInActivity"
-            android:exported="false"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/NoActionBar" />
-        <activity
-            android:name=".GettingStartedActivity"
+            android:name=".activities.SignUpActivity"
             android:exported="false"
             android:screenOrientation="fullSensor"
             android:theme="@style/NoActionBar" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".activities.SignInActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activities.GettingStartedActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activities.SplashActivity"
             android:exported="true"
             android:screenOrientation="fullSensor"
             android:theme="@style/NoActionBar">
@@ -40,7 +43,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
