--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:theme="@style/Theme.TravelGuider"
         tools:targetApi="31">
         <activity
-            android:name=".BaseActivity"
-            android:exported="false" />
+            android:name=".activities.MyProfileActivity"
+            android:exported="false"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activities.BaseActivity"
+            android:exported="false"
+            />
         <activity
             android:name=".activities.SignUpActivity"
             android:exported="false"
