connected the firebase storage

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    implementation 'com.google.firebase:firebase-storage-ktx'
     testImplementation 'junit:junit:4.13.2'
     implementation "com.airbnb.android:lottie:3.4.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
