--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBReAfKcZUJz4xFqmTvdgOXddNECt2xCck" />
+            android:value="${MAPS_API_KEY}" />
 
 
         <activity
